--- a/package.json
+++ b/package.json
@@ -65,7 +65,9 @@
     "youch-terminal": "^2.2.2"
   },
   "dependencies": {
+    "@adonisjs/auth": "^8.2.3",
     "@adonisjs/core": "^5.9.0",
+    "@adonisjs/lucid": "^18.4.0",
     "@adonisjs/repl": "^3.1.11",
     "@adonisjs/session": "^6.4.0",
     "@adonisjs/shield": "^7.1.1",
@@ -73,10 +75,14 @@
     "@eidellev/inertia-adonisjs": "^8.0.1",
     "@inertiajs/inertia-vue3": "^0.6.0",
     "@inertiajs/vue3": "^1.0.9",
+    "luxon": "^3.3.0",
+    "pinia": "^2.1.6",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21",
+    "sqlite3": "^5.1.6",
     "vue": "^3.3.4",
+    "vue-loading-overlay": "^6.0.3",
     "webpack-node-externals": "^3.0.0"
   }
 }
