--- a/public/assets/manifest.json
+++ b/public/assets/manifest.json
@@ -1,4 +1,5 @@
 {
   "assets/app.css": "http://localhost:8080/assets/app.css",
-  "assets/app.js": "http://localhost:8080/assets/app.js"
+  "assets/app.js": "http://localhost:8080/assets/app.js",
+  "assets/images/Logo.svg": "http://localhost:8080/assets/images/Logo.8fdacca0.svg"
 }
